Added an article about soldering to the engineer tech page.

--- a/language/engineerTechArticles.json
+++ b/language/engineerTechArticles.json
@@ -162,6 +162,8 @@
 					"type": "article",
 					"class": "",
 					"articleId": "5brshf",
+					"lastUpdate": "25-10-2019",
+					"writer": "Arthur van Strien",
 					"title": {
 						"nl": "Oscilloscopen",
 						"en": "Oscilloscopes"
@@ -232,8 +234,8 @@
 										"en": "Where to buy?"
 									},
 									{
-										"nl": "<a class='shared-content-inlineLinkBlue' href='https://nl.aliexpress.com/item/32878694776.html?spm=a2g0s.9042311.0.0.27424c4dzJd0fl' target='_blank'>Aliexpress Scope</a><a class='shared-content-inlineLinkBlue' href='https://nl.aliexpress.com/item/32737192555.html?spm=a2g0s.9042311.0.0.27424c4dzJd0fl' target='_blank'>Aliexpress 5V naar 9V USB kabel</a>",
-										"en": "<a class='shared-content-inlineLinkBlue' href='https://nl.aliexpress.com/item/32878694776.html?spm=a2g0s.9042311.0.0.27424c4dzJd0fl' target='_blank'>Aliexpress Scope</a><a class='shared-content-inlineLinkBlue' href='https://nl.aliexpress.com/item/32737192555.html?spm=a2g0s.9042311.0.0.27424c4dzJd0fl' target='_blank'>Aliexpress 5V to 9V USB cable</a>"
+										"nl": "<a class='shared-content-inlineLinkBlue' href='https://nl.aliexpress.com/item/32878694776.html?spm=a2g0s.9042311.0.0.27424c4dzJd0fl' target='_blank'>Aliexpress Scope</a>, <a class='shared-content-inlineLinkBlue' href='https://nl.aliexpress.com/item/32737192555.html?spm=a2g0s.9042311.0.0.27424c4dzJd0fl' target='_blank'>Aliexpress 5V naar 9V USB kabel</a>",
+										"en": "<a class='shared-content-inlineLinkBlue' href='https://nl.aliexpress.com/item/32878694776.html?spm=a2g0s.9042311.0.0.27424c4dzJd0fl' target='_blank'>Aliexpress Scope</a>, <a class='shared-content-inlineLinkBlue' href='https://nl.aliexpress.com/item/32737192555.html?spm=a2g0s.9042311.0.0.27424c4dzJd0fl' target='_blank'>Aliexpress 5V to 9V USB cable</a>"
 									}
 								]
 							]
@@ -293,8 +295,8 @@
 										"en": "More information:"
 									},
 									{
-										"nl": "<a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=Kay4Jk2DHuE'>https://www.youtube.com/watch?v=Kay4Jk2DHuE</a> <a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=gUz3KYp_5Tc'>https://www.youtube.com/watch?v=gUz3KYp_5Tc</a> <a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=Cwbwq-AKbPc'>https://www.youtube.com/watch?v=Cwbwq-AKbPc</a>",
-										"en": "<a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=Kay4Jk2DHuE'>https://www.youtube.com/watch?v=Kay4Jk2DHuE</a> <a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=gUz3KYp_5Tc'>https://www.youtube.com/watch?v=gUz3KYp_5Tc</a> <a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=Cwbwq-AKbPc'>https://www.youtube.com/watch?v=Cwbwq-AKbPc</a>"
+										"nl": "<a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=Kay4Jk2DHuE'>https://www.youtube.com/watch?v=Kay4Jk2DHuE</a>, <a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=gUz3KYp_5Tc'>https://www.youtube.com/watch?v=gUz3KYp_5Tc</a>, <a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=Cwbwq-AKbPc'>https://www.youtube.com/watch?v=Cwbwq-AKbPc</a>",
+										"en": "<a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=Kay4Jk2DHuE'>https://www.youtube.com/watch?v=Kay4Jk2DHuE</a>, <a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=gUz3KYp_5Tc'>https://www.youtube.com/watch?v=gUz3KYp_5Tc</a>, <a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=Cwbwq-AKbPc'>https://www.youtube.com/watch?v=Cwbwq-AKbPc</a>"
 									}
 								]
 							]
@@ -354,8 +356,8 @@
 										"en": "More information:"
 									},
 									{
-										"nl": "<a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=W2qdtQkBKhc'>https://www.youtube.com/watch?v=W2qdtQkBKhc</a> <a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=ETCOhzU1O5A'>https://www.youtube.com/watch?v=ETCOhzU1O5A</a> <a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=kb9P1Am9aFU'>https://www.youtube.com/watch?v=kb9P1Am9aFU</a>",
-										"en": "<a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=W2qdtQkBKhc'>https://www.youtube.com/watch?v=W2qdtQkBKhc</a> <a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=ETCOhzU1O5A'>https://www.youtube.com/watch?v=ETCOhzU1O5A</a> <a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=kb9P1Am9aFU'>https://www.youtube.com/watch?v=kb9P1Am9aFU</a>"
+										"nl": "<a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=W2qdtQkBKhc'>https://www.youtube.com/watch?v=W2qdtQkBKhc</a>, <a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=ETCOhzU1O5A'>https://www.youtube.com/watch?v=ETCOhzU1O5A</a>, <a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=kb9P1Am9aFU'>https://www.youtube.com/watch?v=kb9P1Am9aFU</a>",
+										"en": "<a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=W2qdtQkBKhc'>https://www.youtube.com/watch?v=W2qdtQkBKhc</a>, <a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=ETCOhzU1O5A'>https://www.youtube.com/watch?v=ETCOhzU1O5A</a>, <a class='shared-content-inlineLinkRed' target='_blank' href='https://www.youtube.com/watch?v=kb9P1Am9aFU'>https://www.youtube.com/watch?v=kb9P1Am9aFU</a>"
 									}
 								]
 							]
@@ -366,6 +368,8 @@
 					"type": "article",
 					"class": "",
 					"articleId": "1a5ad3a",
+					"lastUpdate": "25-10-2019",
+					"writer": "Arthur van Strien",
 					"title": {
 						"nl": "Lijmpistool & Accesoires",
 						"en": "Glue Guns & Accesoires"
@@ -375,7 +379,7 @@
 							"type": "paragraph",
 							"class": "",
 							"onClick": "",
-							"nl": "",
+							"nl": "Een lijmpistool is één van die dingen die heel erg handig is bij het in elkaar zetten van verschillende knutselprojecten. Het is echter een heel simpel apparaat, het verwarmt lijm die vervolgens weer afkoelt. Ik zie dus geen reden om hier een duur apparaat voor te kopen alhoewel ik de goedkope apparaten niet onbeheerd aan zou laten staan. Er is bij de ontwikkeling dan immers geen budget geweest om allerlij veiligheidssnufjes in te bouwen en/of te testen.",
 							"en": ""
 						},
 						{
@@ -389,20 +393,14 @@
 							"type": "header2",
 							"class": "",
 							"onClick": "",
-							"nl": "",
-							"en": ""
+							"nl": "Action Lijmpistool",
+							"en": "Action Glue Gun"
 						},
 						{
 							"type": "image",
 							"class": "shared-content-pictureThirdLeftWrap",
 							"onClick": "",
-							"path": "pic_engineer-tech/.jpg"
-						},
-						{
-							"type": "image",
-							"class": "shared-content-pictureThirdLeftWrap",
-							"onClick": "",
-							"path": "pic_engineer-tech/.jpg"
+							"path": "pic_engineer-tech/Action_glue-gun.jpg"
 						},
 						{
 							"type": "table",
@@ -415,8 +413,8 @@
 										"en": "Price:"
 									},
 									{
-										"nl": "€",
-										"en": "€"
+										"nl": "€3",
+										"en": "€3"
 									}
 											
 								],
@@ -426,7 +424,7 @@
 										"en": "Description:"
 									},
 									{
-										"nl": "",
+										"nl": "Doet wat het moet doen, wel goedkope China fabrikaat dus zou hem niet onbeheerd aan laten staan. Is in de praktijk na een minuut of 3-4 wel warm. Voor deze prijs is dit een no-brainer.",
 										"en": ""
 									}
 								],
@@ -436,7 +434,52 @@
 										"en": "Where to buy?"
 									},
 									{
-										"nl": "",
+										"nl": "Op het moment van schrijven bij de winkels van Action in Nederland. Maar deze China fabrikaat is overal te verkrijgen. Dit is alleen de winkel waarvan ik weet dat die hem redelijk consistent voor bijna geen geld heeft.",
+										"en": ""
+									}
+								]
+							]
+						},
+						{
+							"type": "header2",
+							"class": "",
+							"onClick": "",
+							"nl": "Action Lijmpistool patronen",
+							"en": "Action Glue Gun Glue"
+						},
+						{
+							"type": "table",
+							"class": "",
+							"onClick": "",
+							"rowData": [
+								[
+									{
+										"nl": "Prijs:",
+										"en": "Price:"
+									},
+									{
+										"nl": "€0,90",
+										"en": "€0,90"
+									}
+											
+								],
+								[
+									{
+										"nl": "Omschrijving:",
+										"en": "Description:"
+									},
+									{
+										"nl": "Zijn wat aan de gelige kant maar zijn spotgoedkoop dus dit is perfect voor prutsen op budget.",
+										"en": "The colour is a bit yellow-ish but they cost nearly nothing. Perfect for budget DIY projects."
+									}
+								],
+								[
+									{
+										"nl": "Waar te koop?",
+										"en": "Where to buy?"
+									},
+									{
+										"nl": "Op het moment van schrijven bij de Action winkels in Nederland. Is een standaard formaat lijmpatroon dus is bij 1001 andere winkels te verkrijgen in verschilende kleuren en kwaliteiten.",
 										"en": ""
 									}
 								]
@@ -448,6 +491,8 @@
 					"type": "article",
 					"class": "",
 					"articleId": "j2j9nt",
+					"lastUpdate": "25-10-2019",
+					"writer": "Arthur van Strien",
 					"title": {
 						"nl": "Soldeerbouten / Soldeerstations & Accesoires",
 						"en": "Soldering Irons / Stations & Accesoires"
@@ -457,8 +502,314 @@
 							"type": "paragraph",
 							"class": "",
 							"onClick": "",
-							"nl": "Paragraph",
-							"en": "Paragraph"
+							"nl": "Het aanschaffen van een soldeerbout / soldeerstation hoeft het niet duur te zijn. Het liefst wil je een soldeerstation waarbij je de temperatuur kan regelen en voor de prijs van de goedkopere soldeerstations zou ik daar eigenlijk ook gelijk voor gaan. Ook moet je er bij aanschaf even op letten dat er ook nieuwe soldeerbout punten verkrijgbaar zijn voor de bout alhoewel er vaak genoeg imitatie verkrijgbaar zijn voor de standaardmaten die in omloop zijn.",
+							"en": ""
+						},
+						{
+							"type": "paragraph",
+							"class": "",
+							"onClick": "",
+							"nl": "Het is ook handig om wat accesoires bij je soldeerbout/soldeerstation te hebben. Een tinzuiger is de gum bij soldeer projecten. Verwarm de tin opnieuw en zuig het zo weg. Ook is zoiets als een helpende hand vaak handig om je project goed vast te klemmen zodat je makkelijker kan solderen.",
+							"en": ""
+						},
+						{
+							"type": "header3",
+							"class": "",
+							"onClick": "",
+							"nl": "Tin:",
+							"en": "Tin:"
+						},
+						{
+							"type": "paragraph",
+							"class": "",
+							"onClick": "",
+							"nl": "Als je gaat solderen heb je natuurlijk soldeertin nodig. Deze komen in verschillende diktes, met lood en zonder lood en met rosin core en zonder rosin core.",
+							"en": ""
+						},
+						{
+							"type": "paragraph",
+							"class": "",
+							"onClick": "",
+							"nl": "De diktes werken als volgt: als je kleine elektronica projecten gaat solderen dan heb je een dikte van rond de 0.8mm nodig. Als je nog kleinere componenten gaat solderen zoals SMD heb je soldeertin met een dikte van 0.5mm of minder nodig.",
+							"en": ""
+						},
+						{
+							"type": "paragraph",
+							"class": "",
+							"onClick": "",
+							"nl": "Dan is er nog het verschil tussen loodvrije en soldeertin met lood (vaak ook aangeduid als 60/40). Je raad het al, het ene bevat lood en het ander niet. Lood is troep dus zelf zit ik daar niet op te wachten maar het is niet zo dat de loodvrije tin dan maar schoon is, daar zo meer over bij het verhaal over flux. Loodvrije tin heeft ook het nadeel dat het smeltpunt hoger ligt. Loodvrije tin smelt rond de 220 graden celcius terwijl loodhoudende tin dit al doet bij 180 graden celsius. Aan jou dus de keus wat voor tin je wilt gebruiken.",
+							"en": ""
+						},
+						{
+							"type": "paragraph",
+							"class": "",
+							"onClick": "",
+							"nl": "En wat is dan die Rosin Core? Dit is de flux die helpt de tin te vloeien, je kan dit er ook handmatig steeds opgooien. Bijna iedereen soldeert tegenwoordig met tindraad wat binnenin een rosin core heeft waardoor de tin automatisch vloeit.",
+							"en": ""
+						},
+						{
+							"type": "header3",
+							"class": "",
+							"onClick": "",
+							"nl": "Dampen:",
+							"en": "Fumes:"
+						},
+						{
+							"type": "paragraph",
+							"class": "",
+							"onClick": "",
+							"nl": "Of je nu loodhoudende tin soldeert of loodvrije, je hebt altijd flux nodig en die flux verbrand. Deze flux is eigenlijk pure troep en dit wil je gewoonweg niet inademen. Zorg dus dat je een kleine fan hebt die het wegblaast uit de richting van je gezicht en zorg dat je de kamer waar je in werkt ook wel goed ventileert. Er zijn ook filterende afzuiginen die bijvoorbeeld op scholen en bedrijven gebruikt worden. Dit is wel aan te raden aan iemand die professioneel aan de gang gaat, echter voor de hobbyist is een wat meer provisorische afzuiging nog even voldoende.",
+							"en": ""
+						},
+						{
+							"type": "header1",
+							"class": "",
+							"onClick": "",
+							"nl": "Koopadvies",
+							"en": "Purchase Advise"
+						},
+						{
+							"type": "header2",
+							"class": "",
+							"onClick": "",
+							"nl": "Velleman soldeerstation met regelfunctie",
+							"en": "Velleman solderingstation with temperature control"
+						},
+						{
+							"type": "image",
+							"class": "shared-content-pictureThirdLeftWrap",
+							"onClick": "",
+							"path": "pic_engineer-tech/velleman-soldeerstation.jpg"
+						},
+						{
+							"type": "table",
+							"class": "",
+							"onClick": "",
+							"rowData": [
+								[
+									{
+										"nl": "Prijs:",
+										"en": "Price:"
+									},
+									{
+										"nl": "€20",
+										"en": "€20"
+									}
+											
+								],
+								[
+									{
+										"nl": "Omschrijving:",
+										"en": "Description:"
+									},
+									{
+										"nl": "Mooi regelbaar soldeerstation voor de beginner.",
+										"en": ""
+									}
+								],
+								[
+									{
+										"nl": "Waar te koop?",
+										"en": "Where to buy?"
+									},
+									{
+										"nl": "Bij veel winkels maar onder andere te krijgen bij Bol.com.",
+										"en": ""
+									}
+								]
+							]
+						},
+						{
+							"type": "header2",
+							"class": "",
+							"onClick": "",
+							"nl": "Soldeerpomp",
+							"en": "Desoldering pump"
+						},
+						{
+							"type": "image",
+							"class": "shared-content-pictureThirdLeftWrap",
+							"onClick": "",
+							"path": "pic_engineer-tech/desolderingpump.jpg"
+						},
+						{
+							"type": "table",
+							"class": "",
+							"onClick": "",
+							"rowData": [
+								[
+									{
+										"nl": "Prijs:",
+										"en": "Price:"
+									},
+									{
+										"nl": "€3",
+										"en": "€3"
+									}
+											
+								],
+								[
+									{
+										"nl": "Omschrijving:",
+										"en": "Description:"
+									},
+									{
+										"nl": "Als de soldeerbout het potlood is dan is dit de gum. Onmisbaar voor het weghalen van fouten.",
+										"en": ""
+									}
+								],
+								[
+									{
+										"nl": "Waar te koop?",
+										"en": "Where to buy?"
+									},
+									{
+										"nl": "Zat van aanbod, onder andere bij Eleshop.nl.",
+										"en": ""
+									}
+								]
+							]
+						},
+						{
+							"type": "header2",
+							"class": "",
+							"onClick": "",
+							"nl": "3e-hand",
+							"en": "Third-hand"
+						},
+						{
+							"type": "image",
+							"class": "shared-content-pictureThirdLeftWrap",
+							"onClick": "",
+							"path": "pic_engineer-tech/third-hand.jpg"
+						},
+						{
+							"type": "table",
+							"class": "",
+							"onClick": "",
+							"rowData": [
+								[
+									{
+										"nl": "Prijs:",
+										"en": "Price:"
+									},
+									{
+										"nl": "€15",
+										"en": "€15"
+									}
+											
+								],
+								[
+									{
+										"nl": "Omschrijving:",
+										"en": "Description:"
+									},
+									{
+										"nl": "Handige tool bij het solderen van projecten. Zelf vind ik hem onmisbaar.",
+										"en": "Handy tool, a must have for someone who solders regulary."
+									}
+								],
+								[
+									{
+										"nl": "Waar te koop?",
+										"en": "Where to buy?"
+									},
+									{
+										"nl": "Ruim aanbod bij verschillende winkels, onder andere bij Conrad.nl",
+										"en": ""
+									}
+								]
+							]
+						},
+						{
+							"type": "header2",
+							"class": "",
+							"onClick": "",
+							"nl": "Tin",
+							"en": "Tin"
+						},
+						{
+							"type": "table",
+							"class": "",
+							"onClick": "",
+							"rowData": [
+								[
+									{
+										"nl": "Prijs:",
+										"en": "Price:"
+									},
+									{
+										"nl": "€4 of meer",
+										"en": "€4 or more"
+									}
+											
+								],
+								[
+									{
+										"nl": "Omschrijving:",
+										"en": "Description:"
+									},
+									{
+										"nl": "Let op de diktes, of het een rosin core heeft en kies tussen loodhoudend en loodvrij. 100gram is zeker wel even genoeg om vooruit te kunnen, kan je behoorlijk wat projecten mee maken.",
+										"en": ""
+									}
+								],
+								[
+									{
+										"nl": "Waar te koop?",
+										"en": "Where to buy?"
+									},
+									{
+										"nl": "Overal, er is wel een groot kwaliteitsverschil dus kijk eerst of je goed spul hebt voordat je bulk besteld.",
+										"en": ""
+									}
+								]
+							]
+						},
+						{
+							"type": "header2",
+							"class": "",
+							"onClick": "",
+							"nl": "Solder Wick",
+							"en": "Solder Wick"
+						},
+						{
+							"type": "table",
+							"class": "",
+							"onClick": "",
+							"rowData": [
+								[
+									{
+										"nl": "Prijs:",
+										"en": "Price:"
+									},
+									{
+										"nl": "€3",
+										"en": "€3"
+									}
+											
+								],
+								[
+									{
+										"nl": "Omschrijving:",
+										"en": "Description:"
+									},
+									{
+										"nl": "Solder wick is een andere manier om te desolderen. De wick absorbeerd de tin wanneer je deze met je soldeerbout op de tin drukt. Vooral handig bij het verwijderen van tin oppervlakten.",
+										"en": ""
+									}
+								],
+								[
+									{
+										"nl": "Waar te koop?",
+										"en": "Where to buy?"
+									},
+									{
+										"nl": "Bij de meeste elektronica winkels en op Aliexpress.",
+										"en": ""
+									}
+								]
+							]
 						}
 					]
 				}
