Updated the description from the engineerTech page.

--- a/language/engineerTech.json
+++ b/language/engineerTech.json
@@ -10,8 +10,8 @@
 	"fields": [
 		{
 			"name": "lang_paragraph",
-			"nl": "Aan deze pagina wordt nog gewerkt, de inhoud komt binnenkort beschikbaar.",
-			"en": "This page is under construction, the content is available soon."
+			"nl": "Op deze pagina is informatie te vinden die gericht is om beginners in de Techniek een beetje op weg te helpen. Vaak heb je voor een simpel project toch een aantal gereedschappen nodig, waar moet je dan op letten bij de aanschaf?",
+			"en": "This page displays information that is aimed at helping beginners going into Technology. Often you need several tools for a simple project, how do you choose the right tools?"
 		},
 		{
 			"name": "lang_header",
