Updated the header from a article group on the EngineerTech page.

--- a/language/engineerTechArticles.json
+++ b/language/engineerTechArticles.json
@@ -5,8 +5,8 @@
 			"class": "",
 			"onClick": "",
 			"title": {
-				"nl": "Gereedschappen",
-				"en": "Tools"
+				"nl": "Alles over Gereedschap",
+				"en": "All about Tools"
 			},
 			"content": [
 				{
