--- a/language/common.json
+++ b/language/common.json
@@ -31,6 +31,11 @@
 			"en": "Engineering & Technology"
 		},
 		{
+			"name": "lang_menuTools",
+			"nl": "Gereedschap",
+			"en": "Tools"
+		},
+		{
 			"name": "lang_menuAboutme",
 			"nl": "Persoonlijk",
 			"en": "About me"
