Fixed a bug where the gallery button was not changing language.

--- a/language/photography.json
+++ b/language/photography.json
@@ -9,7 +9,12 @@
 	},
 	"fields": [
 		{
-			"name": "lang_title-gallery",
+			"name": "lang_galleryTitle",
+			"nl": "Beeldengalerij",
+			"en": "Gallery"
+		},
+		{
+			"name": "lang_galleryButton",
 			"nl": "Beeldengalerij",
 			"en": "Gallery"
 		}
